index.css
/* ... */
input[type="submit"]:hover {
    background-color: #0056b3;
}








.hamburger {
    display: none;
    font-size: 2rem;
    color: var(--textcolor);
    cursor: pointer;
}

@media (max-width: 768px) {
    header nav ul {
        display: none;
        flex-direction: column;
        background-color: #222;
        position: absolute;
        top: 6em;
        left: 0;
        width: 100%;
        text-align: center;
    }
    header nav ul.active {
        display: flex;
    }
    header nav ul li {
        margin: 1rem 0;
    }
    .hamburger {
        display: block;
    }

    .main_one {
        flex-direction: column;
        height: auto;
    }
    .main_one #sub_main_one1,
    .main_one #sub_main_one2 {
        width: 100%;
        height: auto;
    }
    .main_one #sub_main_one1 {
        padding-bottom: 4rem;
    }
    .main_one #sub_main_one2 {
        padding-top: 2rem;
        padding-bottom: 4rem;
        background-color: #805c5c;
    }
    .img .image {
        position: static;
        width: 80%;
        display: block;
        margin: auto;
    }
    .social {
        transform: translate(2rem, 2rem);
    }
    .main_one #sub_main_one1 h1{
        font-size: 1rem;
    }
    .main_one #sub_main_one1 h1 div span {
        font-size: 2rem;
    }

    .sub_hero_two {
        flex-direction: column;
        align-items: center;
    }
    .hero_two {
        height: auto;
        padding-bottom: 2rem;
    }
    #sub_hero_22 {
        width: 90%;
        text-align: center;
    }
    .sub_hero_two img {
        width: 90%;
        height: auto;
    }

    .Hero_three{
        height: auto;
        padding-bottom: 2rem;
    }
    .Hero_three h1{
        font-size: 3em;
    }
    .card {
        flex-direction: column;
        margin-left: 0;
        align-items: center;
    }
    .cards {
        width: 90%;
        margin: 1rem 0;
    }

    .contact form {
        width: 90%;
    }
}
  
  

